Fixed smaller font size on mobile

--- a/static/global.css
+++ b/static/global.css
@@ -72,10 +72,10 @@ code {
 	border-radius: 2px;
 }
 
-@media (min-width: 500px) {
-	body {
-		font-size: 16px;
-	}
+@media (max-width: 500px) {
+    p {
+        font-size: 1.3em;
+    }
 }
 
 @font-face {
